--- a/css/login.css
+++ b/css/login.css
@@ -2,14 +2,14 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     margin: 0;
-    min-height: 100vh;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container-fluid {
     height: 100vh;
-    width: 100vw;
-    padding-right: 0px !important;
-    padding-left: 0px !important;
 }
 
 .welcome-section {
