--- a/css/style.css
+++ b/css/style.css
@@ -789,8 +789,8 @@ nav .navbar .links li:hover .js-sub-menu {
 
 .flip-card {
   background-color: transparent;
-  width: 100%;
-  height: 200px;
+  width: 375px;
+  height: 250px;
   perspective: 1000px;
   margin: 60px 0px;
   box-shadow: rgb(2, 112, 230) 0px 20px 30px -10px;
@@ -1163,7 +1163,7 @@ nav .navbar .links li {
 }
 .flip-card {
   background-color: transparent;
-  width: 100%;
+  width: 375px;
   height: 265px;
   perspective: 1000px;
   margin: 60px 0px;
